src/components/card/card.css
@font-face {
    font-family: system;
    font-style: normal;
    font-weight: 300;
    src: local('.SFNSText-Light'), local('.HelveticaNeueDeskInterface-Light'),
        local('.LucidaGrandeUI'), local('Ubuntu Light'), local('Segoe UI Light'),
        local('Roboto-Light'), local('DroidSans'), local('Tahoma');
}

body {
    font-family: 'system';
    padding: 0;
    margin: 0;
}

.card {
    width: calc(33% - 10px);
    margin: 20px 0;
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
    border-radius: 20px;
}

.card-image-container {
    padding: 10px;
}

.card-info-container {
    padding: 10px;
}

.card-link {
    color: inherit;
    text-decoration: none;
}
.card-image {
    width: 100%;
}
.card-title {
    margin: 10px 0;
}
.card-type {
    margin: 5px 0;
}
.card-set-name {
    margin: 5px 0;
    font-size: 14px;
}

/* Tablets */
@media (max-width: 1000px) {
    .card {
        width: calc(50% - 22px);
    }
}

/* Mobiles */
@media (max-width: 640px) {
    .card-container {
        max-width: 100%;
        padding: 100px 15px 0 15px;
    }
}

